tests/compile/command_modules/deferred.stderr
In file included from deferred.cpp:1:
In file included from rcgp.hpp:4:
In file included from rcgp-meta.hpp:9:
commands.hpp:89:17: error: static assertion failed: commands combinator detected dispatch before all dependencies
were provided:
	missing dependencies: targets.color
   89 |                 static_assert(false, norm.second);
      |                               ^~~~~
deferred.cpp:176:3: note: in instantiation of function template specialization 'rcgp::operator|<rcgp::ActivatePipeline<rcgp::PipelineKind::eRasterization>, rcgp::NormalEntry<norm_entry{{2, &targets.color, 0}, 2, {{0, 0}, {0, 0}}, nullptr}>, rcgp::NormalEntry<norm_entry{{4, nullptr, 0}, 3, {{0, 0}, {0, 0}}, nullptr}>, rcgp::NormalEntry<norm_entry{{2, &targets.screen, 0}, 2, {{0, 0}, {0, 0}}, nullptr}>, rcgp::NormalEntry<norm_entry{{3, &targets.color, 0}, 1, {{0, 0}, {0, 0}}, &ref_name_storage._M_elems[0]}>, rcgp::TerminalSentinel<rcgp::PipelineKind::eRasterization>>' requested here
  176 |                 | draw(3)
      |                 ^
1 error generated.
